--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+<head>
+    <title>Plein Air</title>
+    <link rel="icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
+</head>
 Hello world
