--- a/index.html
+++ b/index.html
@@ -3,4 +3,12 @@
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
-Hello world
+<header>
+    PLEIN AIR
+</header>
+<body>
+    
+    Under construction
+    Articles
+</body>
+    
