--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    PLEIN AIR
+    <h1>PLEIN AIR</h1>
 </header>
 <body>
     
-    Under construction
-    Articles
+    Under construction<br>
+    Articles<br>
 </body>
     
