--- a/Swamp.html
+++ b/Swamp.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <h1 id="a-ramble-through-the-swamp-under-translation-">A ramble through the swamp (under translation)</h1>
 <h2 id="1-1-l-enlisement-de-l-thique">1.1 L’enlisement de l’éthique</h2>
 <p>L’éthique est une discipline qui se trouve acculée dans un paradoxe douloureux. D’un côté, elle prétend se pencher sur des sujets qui sont parmi les plus importants pour les individus, leurs intérêts particuliers et les sociétés qu’ils forment. Nous voulons dire par là l’étude générale de ce qui est bon ou mauvais, des devoirs et des interdictions, des valeurs, des objectifs des hommes et des moyens qu’ils emploient (ou doivent employer) pour y parvenir<a href="#_ftn1">[1]</a>. De l’autre, elle a toujours été un champ de bataille ou le consensus ne règne guère, et où il a toujours été très difficile de faire le moindre progrès, si tant est qu’il existe une telle chose que le progrès éthique.</p>
